generated-tests/tests/snapshots/rust/test_generated_abstract_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn() -> impl std::fmt::Debug { 42 }

AST:
(source_file
  (function_item
    (identifier test_fn)
    (parameters)
    (abstract_type
      (scoped_type_identifier
        (scoped_identifier
          (identifier std)
          (identifier fmt)
        )
        (type_identifier)
      )
    )
    (block
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test_fn",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "std",
            kind: Identifier,
            scope: Some(
                "test_fn",
            ),
            start_line: 1,
            start_column: 22,
            end_line: 1,
            end_column: 25,
        },
        SerializableUsage {
            name: "fmt",
            kind: Identifier,
            scope: Some(
                "test_fn",
            ),
            start_line: 1,
            start_column: 27,
            end_line: 1,
            end_column: 30,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
