generated-tests/tests/snapshots/rust/test_generated_array_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
[item1, item2]

AST:
(source_file
  (expression_statement
    (array_expression
      (identifier item1)
      (identifier item2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "item1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 7,
            },
        },
        Usage {
            name: "item2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 9,
                end_line: 1,
                end_column: 14,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
