generated-tests/tests/snapshots/rust/test_generated_associated_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
trait TestTrait { type Item; }

AST:
(source_file
  (trait_item
    (type_identifier)
    (declaration_list
      (associated_type
        (type_identifier)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestTrait",
            line_number: 1,
            definition_type: Other(
                "trait_item",
            ),
            scope: Some(
                "TestTrait",
            ),
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
