generated-tests/tests/snapshots/rust/test_generated_binary_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
a + b

AST:
(source_file
  (ERROR
    (binary_expression
      (identifier a)
      (identifier b)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "a",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 2,
            },
        },
        Usage {
            name: "b",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 6,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
