generated-tests/tests/snapshots/rust/test_generated_bounded_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test<T: Clone + Send>(x: T) -> T where T: std::fmt::Debug { x }

AST:
(source_file
  (function_item
    (identifier test)
    (type_parameters
      (constrained_type_parameter
        (type_identifier)
        (trait_bounds
          (type_identifier)
          (type_identifier)
        )
      )
    )
    (parameters
      (parameter
        (identifier x)
        (type_identifier)
      )
    )
    (type_identifier)
    (where_clause
      (where_predicate
        (type_identifier)
        (trait_bounds
          (scoped_type_identifier
            (scoped_identifier
              (identifier std)
              (identifier fmt)
            )
            (type_identifier)
          )
        )
      )
    )
    (block
      (identifier x)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test",
            ),
        },
        Definition {
            name: "x",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: Some(
                "test",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "T",
            kind: TypeIdentifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 29,
            end_line: 1,
            end_column: 30,
        },
        SerializableUsage {
            name: "T",
            kind: TypeIdentifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 35,
            end_line: 1,
            end_column: 36,
        },
        SerializableUsage {
            name: "T",
            kind: TypeIdentifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 43,
            end_line: 1,
            end_column: 44,
        },
        SerializableUsage {
            name: "std",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 46,
            end_line: 1,
            end_column: 49,
        },
        SerializableUsage {
            name: "fmt",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 51,
            end_line: 1,
            end_column: 54,
        },
        SerializableUsage {
            name: "Debug",
            kind: TypeIdentifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 56,
            end_line: 1,
            end_column: 61,
        },
        SerializableUsage {
            name: "x",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 64,
            end_line: 1,
            end_column: 65,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
