generated-tests/tests/snapshots/rust/test_generated_bracketed_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test() -> <Vec<i32> as IntoIterator>::Item { 42 }

AST:
(source_file
  (function_item
    (identifier test)
    (parameters)
    (scoped_type_identifier
      (bracketed_type
        (qualified_type
          (generic_type
            (type_identifier)
            (type_arguments
              (primitive_type)
            )
          )
          (type_identifier)
        )
      )
      (type_identifier)
    )
    (block
      (integer_literal)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test",
            line_number: 1,
            definition_type: FunctionDefinition,
            scope: Some(
                "test",
            ),
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "test",
            kind: Identifier,
            scope: Some(
                "test",
            ),
            start_line: 1,
            start_column: 4,
            end_line: 1,
            end_column: 8,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
