generated-tests/tests/snapshots/rust/test_generated_break_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
'label: loop { break 'label; }

AST:
(source_file
  (expression_statement
    (loop_expression
      (label
        (identifier "label")
      )
      body: (block
        (expression_statement
          (break_expression
            (label
              (identifier "label")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "label",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 7,
            },
        },
        Usage {
            name: "label",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 28,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
